Add Account Button

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -32,7 +32,7 @@
             {% if item.wine.image %}
                 <img src="{{item.wine.image.url}}" class="mx-auto" style="height:9rem; width:3rem;" alt="{{wine.name}}">
             {% else %}
-                <img src="{{MEDIA_URL}}no_img.jpg" width="100rem" height="100rem" >
+                <img src="{{MEDIA_URL}}no_img.jpg" >
             {% endif %}
         </div>
         <div class="col-4 my-auto">
