--- a/templates/base.html
+++ b/templates/base.html
@@ -15,144 +15,148 @@
     {% endblock %}
     <script src="https://js.stripe.com/v3/"></script>
     <script src="https://kit.fontawesome.com/8e8a0aa5cf.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-            crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <title>GPR {%block title %}{% endblock %}</title>
 </head>
-  <body>
-      <header class="fixed-top bg-white top-index shadow">
-          <!-- Lg desktop header-->
-          <nav class="navbar navbar-expand-lg d-none d-lg-block p-0">
-              <div class="container-fluid">
-                  <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
-                  <ul class="navbar-nav font-header">
-                      <li class="nav-item dropdown mx-4">
-                          <a class="nav-link text-light dropdown bg-danger" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                              <div class="text-center">
-                                  <div>
+<body>
+    <header class="fixed-top bg-white top-index shadow">
+        <!-- Lg desktop header-->
+        <nav class="navbar navbar-expand-lg d-none d-lg-block p-0">
+            <div class="container-fluid">
+                <a class="navbar-brand text-dark pt-3 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
+                <ul class="navbar-nav font-header">
+                    <li class="nav-item dropdown mx-4">
+                        <a class="nav-link text-light dropdown bg-danger" href="#" id="user-options" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div class="text-center">
+                                <div>
                                     <i class="fas fa-user fa-lg"></i>
-                                      <span>My Account</span>
-                                  </div>
-                              </div>
-                          </a>
-                          <ul class="dropdown-menu border-0" aria-labelledby="user-options">
-                              {% if request.user.is_authenticated %}
-                              {% if request.user.is_superuser %}
-                              <li>
-                                  <a href="{% url 'admin:index' %}" class="dropdown-item wine-color">Product Management</a>
-                              </li>
-                              {% endif %}
-                              <li><a href="{% url 'profile_view' %}" class="dropdown-item wine-color">My Profile</a></li>
-                              <li>
-                                  <a href="{% url 'account_logout' %}" class="dropdown-item wine-color">Logout</a>
-                              </li>
-                                  {% else %}
-                              <li>
-                                  <a href="{% url 'account_signup' %}" class="dropdown-item wine-color">Register</a>
-                              </li>
-                              <li>
-                                  <a href="{% url 'account_login' %}" class="dropdown-item wine-color">Login</a>
-                              </li>
-                                  {% endif %}
-                          </ul>
-                      </li>
-                      <li class="nav-item">
-                          <a class="nav-link text-light bg-danger" href="{% url 'bag' %}">
-                              <i class="fas fa-shopping-cart"></i>
-                              <strong>{{total}} RON</strong>
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-          </nav>
-          <!-- Tablet and less header-->
-          <nav class="navbar navbar-expand-lg navbar-light bg-light menu p-0 ">
-              <div class="container-fluid">
-                  <!-- Brand -->
-                  <a class="navbar-brand text-dark d-lg-none m-0 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
-                  <!-- Menu Button-->
-                  <button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <!-- List of menu option-->
-                  <div class="collapse navbar-collapse justify-content-end font-header" id="navbarNav">
-                      <ul class="navbar-nav text-center mb-2 text-danger">
-                          <!-- Dropdown menu option-->
-                          <li class="nav-item dropdown">
-                              <a class="nav-link dropdown text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fas fa-wine-glass-alt"></i>
-                                  <span>Vinuri</span>
-                              </a>
-                              <ul class="dropdown-menu text-center border-0 wines-dropdown" aria-labelledby="navbarDropdown">
-                                  <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">Toate</a></li>
-                                  <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color=Red">Rosii</a></li>
-                                  <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color=Rose">Rose</a></li>
-                                  <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color=White">Albe</a></li>
-                              </ul>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link text-danger" href="{% url 'offers' %}">
-                                  <i class="fas fa-gifts"></i>
-                                  Oferte si Promotii
-                              </a>
-                          </li>
-                          <li class="nav-item">
-                              <a class="nav-link text-danger" href="{% url 'contact' %}">
-                                  <i class="far fa-comment-alt"></i>
-                                  Contact
-                              </a>
-                          </li>
-                          <li class="nav-item d-lg-none">
-                              <a class="nav-link text-danger" href="{% url 'bag' %} ">
-                              <i class="fas fa-shopping-cart text-danger "></i> {{total}} RON
-                              </a>
-                          </li>
-                          <li class="nav-item  d-lg-none">
-                          <!-- Search bar -->
-                          <li class="nav-item">
-                              <form method="GET" action="{% url 'wines_view' %}">
-                                  <div class="input-group input-group-sm">
-                                      <input type="text" name="q" class="form-control text-danger rounded-0 border-start-0 border-end-0    border-top-0" placeholder="Cauta un vin">
-                                      <button type="submit" class="btn btn-small text-light bg-danger"><i class="fas fa-search"></i></button>
-                                  </div>
-                              </form>
-                          </li>
-                      </ul>
-                  </div>
-              </div>
-          </nav>
-      </header>
-     
-      <div class="content-zone">
-          {% if messages %}
-          <div class="message-container">
-              {% for message in messages %}
-              {% with message.level as level %}
-              {% if level == 40 %}
-              {% include 'includes/toasts/toast_error.html' %}
-              {% elif level == 30 %}
-              {% include 'includes/toasts/toast_warning.html' %}
-              {% elif level == 25 %}
-              {% include 'includes/toasts/toast_success.html' %}
-              {% else %}
-              {% include 'includes/toasts/toast_info.html' %}
-              {% endif %}
-              {% endwith %}
-              {% endfor %}
-          </div>
-          {% endif %}
-          {% block content %}
-          {% endblock %}
-      </div>
+                                    <span>My Account</span>
+                                </div>
+                            </div>
+                        </a>
+                        <ul class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                            {% if request.user.is_superuser %}
+                            <li>
+                                <a href="{% url 'admin:index' %}" class="dropdown-item wine-color">Product Management</a>
+                            </li>
+                            {% endif %}
+                            <li><a href="{% url 'profile_view' %}" class="dropdown-item wine-color">My Profile</a></li>
+                            <li>
+                                <a href="{% url 'account_logout' %}" class="dropdown-item wine-color">Logout</a>
+                            </li>
+                            {% else %}
+                            <li>
+                                <a href="{% url 'account_signup' %}" class="dropdown-item wine-color">Register</a>
+                            </li>
+                            <li>
+                                <a href="{% url 'account_login' %}" class="dropdown-item wine-color">Login</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light bg-danger" href="{% url 'bag' %}">
+                            <i class="fas fa-shopping-cart"></i>
+                            <strong>{{total}} RON</strong>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!-- Tablet and less header-->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light menu p-0 ">
+            <div class="container-fluid">
+                <!-- Brand -->
+                <a class="navbar-brand text-dark d-lg-none m-0 brand" href="{% url 'home' %}">Grupo Pierola Romania</a>
+                <!-- Menu Button-->
+                <button class="navbar-toggler p-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <!-- List of menu option-->
+                <div class="collapse navbar-collapse justify-content-end font-header" id="navbarNav">
+                    <ul class="navbar-nav text-center mb-2 text-danger">
+                        <!-- Dropdown menu option-->
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-wine-glass-alt"></i>
+                                <span>Vinuri</span>
+                            </a>
+                            <ul class="dropdown-menu text-center border-0 wines-dropdown" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view' %}">Toate</a></li>
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color=Red">Rosii</a></li>
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color=Rose">Rose</a></li>
+                                <li><a class="dropdown-item wine-color" href="{% url 'wines_view'%}?color=White">Albe</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" href="{% url 'offers' %}">
+                                <i class="fas fa-gifts"></i>
+                                Oferte si Promotii
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-danger" href="{% url 'contact' %}">
+                                <i class="far fa-comment-alt"></i>
+                                Contact
+                            </a>
+                        </li>
+                        <li class="nav-item d-lg-none">
+                            <a class="nav-link text-danger" href="{% url 'bag' %} ">
+                                <i class="fas fa-shopping-cart text-danger "></i> {{total}} RON
+                            </a>
+                        </li>
+                        <li class="nav-item  d-lg-none">
+                            <!-- Search bar -->
+                        <li class="nav-item">
+                            <form method="GET" action="{% url 'wines_view' %}">
+                                <div class="input-group input-group-sm">
+                                    <input type="text" name="q" class="form-control text-danger rounded-0 border-start-0 border-end-0    border-top-0" placeholder="Cauta un vin">
+                                    <button type="submit" class="btn btn-small text-light bg-danger"><i class="fas fa-search"></i></button>
+                                </div>
+                            </form>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
-      {% block extra_js%}
-      {% endblock %}
+    <div class="content-zone">
+        {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+            {% with message.level as level %}
+            {% if level == 40 %}
+            {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+            {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+            {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+            {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+            {% endwith %}
+            {% endfor %}
+        </div>
+        {% endif %}
+        {% block content %}
+        {% endblock %}
+    </div>
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-  </body>
-</html>
+    {% block extra_js%}
+    {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
+<script type="text/javascript">
+    const toastLiveExample = document.querySelector('.toast');
+    const toast = new bootstrap.Toast(toastLiveExample);
+    toast.show()
+</script>
+
 {% block postload_js %}
 
 {% endblock %}
+</html>
