Fix decrease quantity not working

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,8 +151,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 <script type="text/javascript">
-    const toastLiveExample = document.querySelector('.toast');
-    const toast = new bootstrap.Toast(toastLiveExample);
+    const toastLive = document.querySelector('.toast');
+    const toast = new bootstrap.Toast(toastLive);
     toast.show()
 </script>
 
