--- a/static/css/base.css
+++ b/static/css/base.css
@@ -47,6 +47,17 @@ body{
 .toast-capper {
     height: 2px;
 }
+.arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent;
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -10px;
+    right: 36px;
+}
+
 .arrow-primary {
     border-bottom-color: #007bff !important;
 }
