--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -3,7 +3,7 @@
     <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark d-flex justify-content-between">
         <strong class="mr-auto">Success!</strong>
-        <button type="button" class="btn-close text-dark" data-dismiss="toast" aria-label="Close">
+        <button type="button" class="btn-close close" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
