--- a/templates/base.html
+++ b/templates/base.html
@@ -123,7 +123,7 @@
         </nav>
     </header>
 
-    <div class="content-zone">
+    <div class="content-zone pt-3">
         {% if messages %}
         <div class="message-container">
             {% for message in messages %}
