--- a/wines/templates/wines/wine_details.html
+++ b/wines/templates/wines/wine_details.html
@@ -4,7 +4,7 @@
   <link type="text/css" rel="stylesheet" href="{% static 'wines/css/wines.css' %}">
 {% endblock %}
 {% block content %}
-    <div class="container">
+    <div class="container mb-4">
         <div class="row d-none d-lg-inline">
             <div class="col-12">
                 <h1>Detalii despre vin</h1>
