--- a/security/templates/security/access_denied.html
+++ b/security/templates/security/access_denied.html
@@ -11,11 +11,14 @@
     <title>Cerinte</title>
   </head>
   <body>
-    <h1 class="mt-3 text-center mb-5"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}" >Grupo Pierola Romania</a></h1>
-        <h5 class="text-center">Ne pare rau dar nu poti vizita website-ul deoarece nu inteplinesti cel putin una din cerintele mentionate anterior.</h5>
-        <h5 class="text-center mb-5">Te reasteptam cu drag, <strong>Grupo Pierola Romania!</strong> </h5>
-            <div class="row d-md-flex justify-content-center">
-                <div class="col-sm-12 col-md-2"><a class="btn btn-info" href="{% url 'requirements' %}">Catre cerinte</a></div>
-            </div>
+      <div class="container">
+          <h1 class="mt-3 text-center mb-5"><a class="brand text-dark text-decoration-none  " href="{% url 'home' %}">Grupo Pierola Romania</a></h1>
+          <h5 class="text-center">Ne pare rau dar nu poti vizita website-ul deoarece nu inteplinesti cel putin una din cerintele mentionate anterior.</h5>
+          <h5 class="text-center mb-5">Te reasteptam cu drag, <strong>Grupo Pierola Romania!</strong> </h5>
+          <div class="row d-md-flex justify-content-center">
+              <div class="col-sm-12 col-md-2"><a class="btn btn-info" href="{% url 'requirements' %}">Catre cerinte</a></div>
+          </div>
+      </div>
+   
   </body>
 </html>
