--- a/wines/templates/wines/wines.html
+++ b/wines/templates/wines/wines.html
@@ -6,7 +6,7 @@
 {% block content %}
 
 <div class="container-fluid wine-list" id ="winelist">
-    <h1 class="text-center mt-5">Vinuri</h1>
+    <h1 class="text-center">Vinuri</h1>
     {% include 'wines/includes/mobile_filters.html' %}
     <span class="badge badge-pill badge-warning">Warning</span>
     <div class="row">
