--- a/templates/allauth/socialaccount/login.html
+++ b/templates/allauth/socialaccount/login.html
@@ -3,7 +3,7 @@
 
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
-{% block content %}
+{% block inner_content %}
 {% if process == "connect" %}
 <h1>{% blocktrans with provider.name as provider %}Connect {{ provider }}{% endblocktrans %}</h1>
 
@@ -15,7 +15,7 @@
 {% endif %}
 
 <form method="post">
-  {% csrf_token %}
-  <button type="submit">{% trans "Continue" %}</button>
+    {% csrf_token %}
+    <button type="submit">{% trans "Continue" %}</button>
 </form>
 {% endblock %}
